--- a/SharedCode/SharedCode.csproj
+++ b/SharedCode/SharedCode.csproj
@@ -22,6 +22,7 @@
   <ItemGroup>
     <Folder Include="Day01\" />
     <Folder Include="Day02\" />
+    <Folder Include="Console\" />
   </ItemGroup>
 
 </Project>
